<resources>
    <string name="app_name">Move</string>
    <!--    Onboarding strings-->
    <string name="onboarding_safety_title">Safety</string>
    <string name="onboarding_scan_title">Scan</string>
    <string name="onboarding_parking_title">Parking</string>
    <string name="onboarding_rules_title">Rules</string>
    <string name="onboarding_skip">Skip</string>
    <string name="onboarding_safety_tutorial">Please wear a helmet and protect yourself while riding</string>
    <string name="onboarding_scan_tutorial">Scan the QR code or NFC sticker on top of the scooter to unlock and ride.</string>
    <string name="onboarding_parking_tutorial">If convenient, park at a bike rack. If not, park close to the edge of the sidewalk closest to the street. Do not block sidewalks, doors or ramps.</string>
    <string name="onboarding_rules_tutorial">You must be 18 years or and older with a valid driving licence to operate a scooter. Please follow all street signs, signals and markings, and obey local traffic laws.</string>
    <string name="onboarding_next_button">Next</string>
    <string name="onboarding_ride_title">Ride</string>
    <string name="onboarding_ride_tutorial">Step on the scooter with one foot and kick off the ground. When the scooter starts to coast, push the right throttle to accelerate.</string>
    <!--    Authentication Strings-->
    <string name="get_started_button">Get started</string>
    <string name="saved_splash_next_fragment">Splash Next Fragment</string>
    <string name="shared_pref_default_value">Default</string>
    <string name="register_get_started_heading">Let\'s get started</string>
    <string name="register_heading2_text">Sign up or login and start riding right away</string>
    <string name="authentication_email_address_et_hint">Email address</string>
    <string name="authentication_username_et_hint">Username</string>
    <string name="authentication_password_et_hint">Password</string>
    <string name="register_terms_and_conditions_text_view">By continuing you agree to Move’s Terms and Conditions and Privacy Policy</string>
    <string name="authentication_register_to_login">You already have an account? You can log in here</string>
    <string name="authentication_login_text">Login</string>
    <string name="authentication_login_heading2">Enter your account credentials and start riding away</string>
    <string name="authentication_login_forgot_password">Forgot your password?</string>
    <string name="authentication_login_to_register">Don’t have an account? You can start with one here</string>
    <string name="key_terms_and_conditions">Terms and Conditions</string>
    <string name="key_privacy_policy">Privacy Policy</string>
    <string name="key_register_to_login">log in here</string>
    <string name="key_login_to_register">start with one here</string>
    <string name="authentication_forgot_password_title">Forgot password</string>
    <string name="authentication_send_reset_btn">Send Reset Link</string>
    <string name="authentication_forgot_password_heading2">Enter the email address you\'re using for your account bellow and we\'ll send you a password reset link.</string>
    <string name="authentication_reset_password_text">Reset Password</string>
    <string name="authentication_reset_password_new_pw_text_view">New password</string>
    <string name="authentication_reset_password_confirm_pw_text_view">Confirm new password</string>
    <string name="authentication_reset_password_error">Passwords do not match</string>
    <string name="authentication_forgot_password_dialog_title">Password reset link sent</string>
    <string name="authentication_forgot_password_dialog_content">Please check your inbox or spam for the email containing the password reset link.</string>
    <string name="button_ok_text">OK</string>
    <!--    Driving License Verification Strings-->
    <string name="authentication_driving_license_title">Driving License</string>
    <string name="authentication_driving_license_heading">Before you can start riding</string>
    <string name="authentication_driving_license_content">Please take a photo or upload the front side of your driving license so we can make sure that it is valid.</string>
    <string name="authentication_driving_license_btn_text">Add driving license</string>
    <!--    Map styling strings-->
    <string name="map_id">da8a2f618a25f60e</string>
    <string name="map_header_location_allowed">Cluj Napoca</string>
    <string name="map_header_location_not_allowed">Allow location</string>
    <string name="authentication_pending_verification_text">We are currently verifying your driving license</string>
    <string name="authentication_success_verification_text">We\'ve successfully validated your driving license</string>
    <string name="authentication_success_btn_text">Find scooters</string>
    <string name="scooter_card_view_title">Scooter</string>
    <string name="scooter_card_view_id">#AB23</string>
    <string name="scooter_card_view_battery_perc">96%</string>
    <string name="scooter_card_view_btn_text">Unlock</string>
    <string name="scooter_bottom_sheet_title">You can unlock this scooter through these methods:</string>
    <string name="scooter_bottom_sheet_ring">Ring</string>
    <string name="scooter_bottom_sheet_missing">Missing</string>
    <!--    Scooter unlock strings-->
    <string name="scooter_bottom_sheet_number">#%d</string>
    <string name="scooter_bottom_sheet_battery_level">%d%%</string>
    <!--    Scooter unlock strings-->
    <string name="scooter_unlock_toolbar_title">Enter serial number</string>
    <string name="scooter_unlock_heading">Enter the scooter\'s serial number</string>
    <string name="scooter_unlock_content">You can find it on the scooter\'s front panel</string>
    <string name="scooter_unlock_alternative">Alternately you can unlock using</string>
    <string name="scooter_unlock_or">or</string>
    <string name="scooter_success_unlock_heading">Unlock successful</string>
    <string name="scooter_success_unlock_content">Please respect all the driving regulations and other participants in traffic while using our scooters.</string>
    <!--    Menu strings-->
    <string name="menu_ride_history_heading">History</string>
    <string name="menu_ride_history_button_text">See all</string>
    <string name="menu_settings_heading">General Settings</string>
    <string name="menu_settings_account">Account</string>
    <string name="menu_settings_change_pw">Change password</string>
    <string name="menu_legal_heading">Legal</string>
    <string name="menu_legal_terms">Terms and Conditions</string>
    <string name="menu_legal_privacy">Privacy Policy</string>
    <string name="menu_rate_us_heading">Rate us</string>
    <string name="menu_account_heading">Account</string>
    <string name="menu_account_logout">Log out</string>
    <string name="menu_appbar_heading">Hi %s</string>
    <string name="menu_history_total_rides">Total rides: %d</string>
    <string name="key_rate_us">Thank you!</string>
    <string name="menu_change_pw_old">Old password</string>
    <string name="menu_change_pw_new">New password</string>
    <string name="menu_change_pw_confirm">Confirm new password</string>
    <string name="menu_settings_save_edits">Save edits</string>
    <string name="history_card_view_start_heading">From</string>
    <string name="history_card_view_end_heading">To</string>
    <string name="history_card_view_time_heading">Travel time</string>
    <string name="history_card_view_distance_heading">Distance</string>
    <string name="start_ride_btn_text">Start ride</string>
    <string name="history_card_view_distance">%f km</string>
    <string name="ride_info_bottom_sheet_heading">Trip details</string>
    <string name="ride_info_time_heading">Travel time</string>
    <string name="ride_info_chronometer_unit">min</string>
    <string name="ride_info_distance_heading">Distance</string>
    <string name="ride_info_btn_lock">Lock</string>
    <string name="ride_info_btn_unlock">Unlock</string>
    <string name="ride_info_btn_end_ride">End ride</string>
    <string name="bottom_sheet_battery_card_heading">Battery</string>
    <string name="map_fragment_in_ride_menu_alert">Cannot access menu while in ride</string>
    <string name="ride_info_distance_text">%.1f</string>
    <string name="ride_info_default_value">0.0</string>
</resources>