<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:orientation="vertical"
    tools:context=".presentation.authentification.forgotpassword.ForgotPasswordFragment"
    tools:ignore="ContentDescription">

    <ImageView
        android:id="@+id/backIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/authentication_chevron_margin_top"
        android:src="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/titleTV"
        style="@style/Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/authentication_title_margin_top"
        android:text="@string/authentication_forgot_password_title"
        android:textColor="@color/primary_text_color" />

    <TextView
        android:id="@+id/heading2TV"
        style="@style/Heading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/authentication_headings_top_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:text="@string/authentication_forgot_password_heading2"
        android:textColor="@color/authentication_second_text_color" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        style="@style/PrimaryTF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/authentication_email_address_et_hint"
        app:endIconDrawable="@drawable/ic_clear_text"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTIET"
            style="@style/PrimaryET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress|textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendResetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/authentication_btn_margin_top"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:background="@drawable/bg_primary_button"
        android:enabled="false"
        android:text="@string/authentication_send_reset_btn"
        android:textColor="@color/primary_button_text_color" />
</LinearLayout>