<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:ignore="ContentDescription">

    <ImageView
        android:id="@+id/scooterIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/start_ride_bottom_iv_margin_top"
        android:src="@drawable/ic_scooter_bottom_sheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scooterTV"
        style="@style/Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/start_ride_bottom_sheet_heading_margin_top"
        android:text="@string/scooter_card_view_title"
        android:textColor="@color/scooter_cv_title_color"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scooterIdTV"
        style="@style/Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:text="@string/scooter_card_view_id"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/heading1_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scooterTV" />

    <ImageView
        android:id="@+id/batteryIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:src="@drawable/ic_battery_100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scooterIdTV" />

    <TextView
        android:id="@+id/batteryTV"
        style="@style/Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/scooter_card_view_battery_iv_margin_end"
        android:text="@string/scooter_card_view_battery_perc"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintStart_toEndOf="@+id/batteryIV"
        app:layout_constraintTop_toBottomOf="@id/scooterIdTV" />

    <Button
        android:id="@+id/startRideBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/start_ride_bottom_sheet_btn_margin_top"
        android:layout_marginBottom="@dimen/start_ride_bottom_sheet_btn_margin_bottom"
        android:text="@string/start_ride_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scooterIV" />
</androidx.constraintlayout.widget.ConstraintLayout>