<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    app:behavior_hideable="false"
    app:behavior_peekHeight="10dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:ignore="ContentDescription,HardcodedText">

    <TextView
        android:id="@+id/titleTV"
        style="@style/Heading2SB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:gravity="center"
        android:text="@string/ride_info_bottom_sheet_heading"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/batteryIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_battery_100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTV"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:id="@+id/batteryTV"
        style="@style/Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/scooter_card_view_battery_iv_margin_end"
        android:layout_marginTop="16dp"
        android:text="@string/scooter_card_view_battery_perc"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintStart_toEndOf="@+id/batteryIV"
        app:layout_constraintTop_toBottomOf="@id/titleTV"
        tools:layout_editor_absoluteY="192dp" />

    <ImageView
        android:id="@+id/timeIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:src="@drawable/ic_clock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/batteryIV" />

    <TextView
        android:id="@+id/timeTV"
        style="@style/Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:text="@string/ride_info_time_heading"
        android:textColor="@color/bottom_sheet_heading"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintStart_toEndOf="@id/timeIV"
        app:layout_constraintTop_toBottomOf="@id/batteryIV" />

    <Chronometer
        android:id="@+id/timeChronometer"
        style="@style/Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:fontFamily="@font/bai_jamjuree_bold"
        android:textColor="@color/secondary_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeIV" />

    <TextView
        android:id="@+id/textView"
        style="@style/Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/ride_info_chronometer_unit"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintStart_toEndOf="@id/timeChronometer"
        app:layout_constraintTop_toBottomOf="@id/timeIV" />

    <ImageView
        android:id="@+id/mapIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:src="@drawable/ic_map"
        app:layout_constraintEnd_toStartOf="@id/distanceHeadingTV"
        app:layout_constraintTop_toBottomOf="@id/batteryIV" />

    <TextView
        android:id="@+id/distanceHeadingTV"
        style="@style/Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:text="@string/ride_info_distance_heading"
        android:textColor="@color/bottom_sheet_heading"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/batteryIV" />

    <TextView
        android:id="@+id/distanceTV"
        style="@style/Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2.7"
        android:textColor="@color/secondary_text_color"
        app:layout_constraintEnd_toStartOf="@id/distanceUnitTV"
        app:layout_constraintTop_toBottomOf="@id/distanceHeadingTV" />

    <TextView
        android:id="@+id/distanceUnitTV"
        style="@style/Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:text="km"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/distanceHeadingTV" />

    <Button
        android:id="@+id/lockBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/bg_primary_button_disabled"
        android:drawableLeft="@drawable/ic_lock"
        android:text="@string/ride_info_btn_lock"
        android:textColor="@color/transparent_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endRideBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeChronometer"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/endRideBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="46dp"
        android:text="@string/ride_info_btn_end_ride"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lockBtn"
        app:layout_constraintTop_toBottomOf="@id/timeChronometer" />
</androidx.constraintlayout.widget.ConstraintLayout>